@@ -1,6 +1,6 @@
-Date: 2020-10-06
+Date: 2020-10-14
 Package: CHNOSZ
-Version: 1.3.6-83
+Version: 1.3.6-84
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
